--- a/src/app/admin/admin-navbar/admin-navbar.less
+++ b/src/app/admin/admin-navbar/admin-navbar.less
@@ -24,5 +24,20 @@
     justify-content: flex-start;
     align-items: center;
     font-size: 1rem;
+    > .action-item {
+      margin: 0 1rem;
+    }
+  }
+  .accessor-action-container {
+    flex: 1 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 1rem;
+    margin-right: 3rem;
+    > .accessory-action {
+      margin: 0 0.5rem;
+    }
   }
 }
