--- a/src/app/admin/list-bangumi/list-bangumi.less
+++ b/src/app/admin/list-bangumi/list-bangumi.less
@@ -1,8 +1,13 @@
-.action-item {
-  height: 2.8rem;
-}
 .search-action {
   width: 20rem;
+  height: 2.8rem;
+}
+.sort-button {
+  padding: 0 0.4rem;
+}
+.anchor-button {
+  cursor: pointer;
+  color: #333333;
 }
 .content-area {
   position: fixed;
