--- a/src/app/home/player/volumne-control/volume-control.less
+++ b/src/app/home/player/volumne-control/volume-control.less
@@ -1,3 +1,13 @@
+:host {
+  display: none;
+  position: absolute;
+  right: 6rem;
+  bottom: 4rem;
+  &.show {
+    display: block;
+  }
+}
+
 .volume-control-wrapper {
   display: block;
   background-color: rgba(0, 0, 0, 0.2);
