--- a/src/ng2-semantic/ng2-semantic.less
+++ b/src/ng2-semantic/ng2-semantic.less
@@ -1,4 +1,4 @@
 //@import "../assets/semantic-ui-less/semantic.less";
 
-@import "./image-placeholder/ui-image-placeholder.less";
-@import "./slider/slider.less";
+//@import "./image-placeholder/ui-image-placeholder.less";
+//@import "./slider/slider.less";
