--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -1,10 +1,4 @@
-@import "./default/default.less";
-@import "./play-episode/play-episode.less";
-@import "./player/player.less";
-@import "./bangumi-detail/bangumi-detail.less";
-@import "./bangumi-list/bangumi-list.less";
-
-home {
+:host {
   display: block;
   height: 100%;
   padding-top:3.5rem;
@@ -158,30 +152,6 @@ home {
       left: 0;
       width: 100%;
       height: 100%;
-    }
-    .icon-holder {
-      font-size: 2rem;
-    }
-  }
-}
-
-.bangumi-card {
-  ui-image-placeholder {
-    width: 100%;
-    height: 0;
-    padding-bottom: 140.5152224824%;
-    position: relative;
-    .image-wrapper {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      > img {
-        object-fit: cover;
-        height: 100%;
-      }
     }
     .icon-holder {
       font-size: 2rem;
