--- a/src/app/admin/list-bangumi/list-bangumi.html
+++ b/src/app/admin/list-bangumi/list-bangumi.html
@@ -40,6 +40,6 @@
         <div class="no-result-tips"><i class="warning circle icon"></i>没有找到番组</div>
     </div>
     <div class="searching-container" *ngIf="isLoading">
-        <div class="ui massive text active loader">Loading...</div>
+        <div class="ui inverted massive text active loader">Loading...</div>
     </div>
 </div>
