--- a/src/app/admin/search-bangumi/search-bangumi.less
+++ b/src/app/admin/search-bangumi/search-bangumi.less
@@ -1,4 +1,5 @@
 .search-bangumi-modal {
+  text-align: left;
   @media(max-width: 767px) {
     width: 100%;
   }
@@ -22,30 +23,71 @@
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  background-color: #fff;
+  border-radius: 4px;
+  padding-top: 4rem;
+  background-color: #f0f0f0;
   .search-bar {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-
+    height: 4rem;
+    border-bottom: 1px solid #cccccc;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
     background-color: #ffffff;
-    &.ui.form {
-      .inline.fields {
-        margin: 0;
-      }
-    }
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
     .back-button {
       display: inline-block;
       padding: 0.6rem;
       color: #333333;
       cursor: pointer;
+      margin-left: 2rem;
+      margin-right: 4rem;
     }
+    .input {
+      > input {
+        width: 30rem;
+      }
+    }
+  }
+
+  .search-result-container,
+  .no-result-container,
+  .searching-wrapper{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
+  .no-result-tip {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 8em;
+    height: 2em;
+    font-size: 4rem;
+    color: #9f9f9f;
+  }
+  .searching-wrapper .loader {
+    color: #9f9f9f;
   }
 
   .bangumi-list {
     margin-bottom: 2rem;
     overflow-x: hidden;
     overflow-y: auto;
+  }
+  .pagination-wrapper {
+    text-align: center;
+    padding-bottom: 2rem;
   }
 }
