--- a/src/app/admin/search-bangumi/search-bangumi.less
+++ b/src/app/admin/search-bangumi/search-bangumi.less
@@ -24,8 +24,23 @@
   margin-right: auto;
   position: relative;
   border-radius: 4px;
-  padding-top: 4rem;
   background-color: #f0f0f0;
+  overflow: hidden;
+  .search-list {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    padding-top: 4rem;
+    transition: transform 300ms ease-out;
+    transform: translate3d(0, 0, 0);
+  }
+  &.show-detail {
+    .search-list {
+      transform: translate3d(-100%, 0, 0);
+    }
+  }
   .search-bar {
     position: absolute;
     top: 0;
