--- a/src/app/admin/search-bangumi/search-bangumi.less
+++ b/src/app/admin/search-bangumi/search-bangumi.less
@@ -97,9 +97,7 @@
   }
 
   .bangumi-list {
-    margin-bottom: 2rem;
-    overflow-x: hidden;
-    overflow-y: auto;
+    margin: 0 0.5rem 2rem 0.5rem;
   }
   .pagination-wrapper {
     text-align: center;
