--- a/src/app/admin/bangumi-card/bangumi-card.less
+++ b/src/app/admin/bangumi-card/bangumi-card.less
@@ -41,15 +41,21 @@ bangumi-card {
       margin: 0 1.5rem 1rem 1.5rem;
       white-space: nowrap;
       text-overflow: ellipsis;
+      .ui.label {
+        margin-left: 1em;
+        position: relative;
+        top: -0.1rem;
+      }
     }
     h4.entry {
-      margin: 0 0 0.8rem 0;
+      margin: 0 0 0.6rem 0;
       .entry-value {
         padding-left: 7.4em;
       }
     }
     .entry {
       position: relative;
+      margin: 0 0 0.6em 0;
       .entry-key {
         width: 7em;
         display: block;
