split bangumi-detail to multiple section, bangumi basic info will be a separated dialog

--- a/src/app/admin/bangumi-card/bangumi-card.html
+++ b/src/app/admin/bangumi-card/bangumi-card.html
@@ -7,26 +7,26 @@
             <img [src]="bangumi.image" alt="image" class="bangumi-image">
         </div>
         <div class="list-item-text">
-            <h4 class="bangumi-title">{{bangumi.name_cn}}<span class="ui teal small label" *ngIf="bangumi.id && showAddedTag">已添加</span></h4>
+            <h4 class="bangumi-title">{{bangumi.name_cn || '暂无'}}<span class="ui teal small label" *ngIf="bangumi.id && showAddedTag">已添加</span></h4>
             <h4 class="entry">
                 <span class="entry-key">日文名</span>
-                <span class="entry-value">{{bangumi.name}}</span>
+                <span class="entry-value">{{bangumi.name || '暂无'}}</span>
             </h4>
             <p class="entry">
                 <span class="entry-key">简介</span>
-                <span class="entry-value">{{bangumi.summary}}</span>
+                <span class="entry-value">{{bangumi.summary || '暂无'}}</span>
             </p>
             <p class="entry">
                 <span class="entry-key">放送开始</span>
-                <span class="entry-value">{{bangumi.air_date}}</span>
+                <span class="entry-value">{{bangumi.air_date || '未知'}}</span>
             </p>
             <p class="entry">
                 <span class="entry-key">放送星期</span>
-                <span class="entry-value">{{bangumi.air_weekday}}</span>
+                <span class="entry-value">{{bangumi.air_weekday || '未知'}}</span>
             </p>
             <p class="entry">
                 <span class="entry-key">话数</span>
-                <span class="entry-value">{{bangumi.eps}}</span>
+                <span class="entry-value">{{bangumi.eps || '0'}}</span>
             </p>
         </div>
     </div>
