refactor bangumi-detail(incomplete) add basic, download panel add bangumi-basic dialog refactor keyword builder to dialog

--- a/src/app/admin/admin-navbar/admin-navbar.less
+++ b/src/app/admin/admin-navbar/admin-navbar.less
@@ -10,6 +10,18 @@
   background-color: #ffffff;
   border-bottom: 1px solid #cccccc;
   z-index: 1000;
+  .back-button {
+    display: block;
+    font-size: 1.2rem;
+    align-self: center;
+    padding: 1.8rem;
+    color: #333333;
+    cursor: pointer;
+    &:hover,
+    &:focus {
+      color: #5f94c5;
+    }
+  }
   .title {
     font-size: 1.6rem;
     font-weight: 500;
