--- a/src/app/admin/admin-navbar/admin-navbar.html
+++ b/src/app/admin/admin-navbar/admin-navbar.html
@@ -1,4 +1,7 @@
 <nav class="nav-admin">
+    <a class="back-button" [routerLink]="backLink" *ngIf="backLink">
+        <i class="chevron left icon"></i>
+    </a>
     <div class="title">{{navTitle}}</div>
     <div class="action-container">
         <ng-content select=".action-item"></ng-content>
