--- a/src/app/admin/bangumi-detail/keyword-builder/keyword-builder.less
+++ b/src/app/admin/bangumi-detail/keyword-builder/keyword-builder.less
@@ -1,41 +1,75 @@
-keyword-builder {
+.keyword-builder-container {
+  text-align: left;
+  @media(max-width: 767px) {
+    width: 90%;
+  }
+  @media(min-width: 768px) {
+    width: 768px;
+  }
+  @media(min-height: 640px) {
+    height: 640px;
+  }
+  @media(max-height: 639px) {
+    height: 100%;
+  }
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  border-radius: 4px;
+  background-color: #fff;
+  overflow: hidden;
+  padding-top: 4rem;
+}
+.search-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 4rem;
+  border-bottom: 1px solid #cccccc;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
   .input-box-wrapper {
+    flex: 1 1 auto;
+    margin: 0 1rem;
+  }
+  .test-button {
+    margin: 0 1rem 0 0;
+  }
+}
+.search-result-wrapper {
+  height: 100%;
+  width: 100%;
+  padding-bottom: 5rem;
+  overflow-y: scroll;
+  overflow-x: auto;
+  .table {
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-
-    select {
-      flex: 1 1 auto;
-    }
-
-    input[type="text"] {
-      flex: 1 1 auto;
-    }
-
-    button.ui.primary {
-      flex: 0 1 auto;
-      margin-left: 2rem;
-    }
-
-    button.ui.negative {
-      flex: 0 1 auto;
-      margin-left: 1rem;
-    }
+    overflow: visible;
   }
-  .editor-wrapper {
-    position: relative;
-  }
-  .search-result-wrapper {
-    max-height: 20rem;
-    max-width: 100%;
-    overflow-y: scroll;
-    overflow-x: auto;
-    position: absolute;
-    z-index: 100;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-    .table {
-      overflow: visible;
-    }
+}
+.footer {
+  position: absolute;
+  width: 100%;
+  height: 5rem;
+  left: 0;
+  bottom: 0;
+  padding-right: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  border-top: 1px solid #e2e2e2;
+  background-color: #fff;
+  > .ui.button {
+    margin-right: 2rem;
   }
 }
